--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -1,7 +1,7 @@
 name: weekly-tasks
-on: push
-  # schedule:
-  # - cron: 0 0 * * 0
+on:
+  schedule:
+  - cron: 0 0 * * 0
 
 jobs:
   create-this-week-template:
