--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -1,9 +1,9 @@
 name: weekly-tasks
 on:
-  push:
-    branches: [ master ]
-  # schedule:
-  # - cron: 0 0 * * 0
+  # push:
+  #   branches: [ master ]
+  schedule:
+  - cron: 0 0 * * 0
 
 jobs:
   create-this-week-template:
