--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,9 @@
 [build]
   publish = "public"
   command = "yarn run build"
+
+[context.deploy-preview.environment]
+  GIT_LFS_ENABLED ="true"
+
+[context.production.environment]
+  GIT_LFS_ENABLED ="true"
