--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -46,6 +46,7 @@ jobs:
       id: get_latest_release
       with:
         route: POST /repos/${{ env.GITHUB_REPOSITORY }}/pulls/${{ steps.create-pull-request.outputs.pull-request-number }}/codespaces
+        mediaType: "format: raw"
       env:
         GITHUB_TOKEN: ${{ secrets.CODESPACE_TOKEN }}
         GITHUB_REPOSITORY: legnoh/leglog
