--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -43,8 +43,10 @@ jobs:
         branch: ${{ env.slug }}
     - name: Create Codespace for PullRequest
       run: |
-        curl -vvv -X "POST" "https://api.github.com/repos/legnoh/leglog/pulls/${{ steps.create-pull-request.outputs.pull-request-number }}/codespaces" \
+        curl -vvv -f -X "POST" "https://api.github.com/repos/legnoh/leglog/pulls/${{ steps.create-pull-request.outputs.pull-request-number }}/codespaces" \
             -H 'Accept: application/vnd.github.v3+json' \
             -H "Authorization: Bearer ${CODESPACE_TOKEN}" \
             -H 'Content-Type: application/json; charset=utf-8' \
             -d $'{"location": "SoutheastAsia"}'
+      env:
+        CODESPACE_TOKEN: ${{ secrets.CODESPACE_TOKEN }}
