--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -47,6 +47,6 @@ jobs:
             -H 'Accept: application/vnd.github.v3+json' \
             -H "Authorization: Bearer ${CODESPACE_TOKEN}" \
             -H 'Content-Type: application/json; charset=utf-8' \
-            -d $'{"location": "SoutheastAsia"}'
+            -d $'{"location": "SouthEastAsia"}'
       env:
         CODESPACE_TOKEN: ${{ secrets.CODESPACE_TOKEN }}
