--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -1,5 +1,6 @@
 name: Cleanup Codespaces
 on:
+  workflow_dispatch:
   pull_request:
     types:
       - "closed"
@@ -12,6 +13,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Cleanup Codespace for PullRequest
       run: |
+        jq
         source .github/workflows/github_api_codespaces.sh
         target_codespaces=$(get_pullreq_unused_spaces "${{ secrets.CODESPACE_TOKEN }}" "legnoh" "leglog" "${GITHUB_REF_NAME}")
         echo ${target_codespaces}
