--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -13,7 +13,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Cleanup Codespace for PullRequest
       run: |
-        jq
+        echo "${GITHUB_REF_NAME}"
         source .github/workflows/github_api_codespaces.sh
         target_codespaces=$(get_pullreq_unused_spaces "${{ secrets.CODESPACE_TOKEN }}" "legnoh" "leglog" "${GITHUB_REF_NAME}")
         echo ${target_codespaces}
