--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -12,37 +12,14 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - uses: FranzDiebold/github-env-vars-action@v1.2.1
-    - name: Print environment variables
-      run: |
-        echo "CI_REPOSITORY_SLUG=$CI_REPOSITORY_SLUG"
-        echo "CI_REPOSITORY_OWNER=$CI_REPOSITORY_OWNER"
-        echo "CI_REPOSITORY_OWNER_SLUG=$CI_REPOSITORY_OWNER_SLUG"
-        echo "CI_REPOSITORY_NAME=$CI_REPOSITORY_NAME"
-        echo "CI_REPOSITORY_NAME_SLUG=$CI_REPOSITORY_NAME_SLUG"
-        echo "CI_REPOSITORY=$CI_REPOSITORY"
-        echo "CI_REF_SLUG=$CI_REF_SLUG"
-        echo "CI_ACTION_REF_NAME=$CI_ACTION_REF_NAME"
-        echo "CI_ACTION_REF_NAME_SLUG=$CI_ACTION_REF_NAME_SLUG"
-        echo "CI_REF_NAME=$CI_REF_NAME"
-        echo "CI_REF_NAME_SLUG=$CI_REF_NAME_SLUG"
-        echo "CI_REF=$CI_REF"
-        echo "CI_HEAD_REF_SLUG=$CI_HEAD_REF_SLUG"
-        echo "CI_HEAD_REF=$CI_HEAD_REF"
-        echo "CI_BASE_REF_SLUG=$CI_BASE_REF_SLUG"
-        echo "CI_BASE_REF=$CI_BASE_REF"
-        echo "CI_SHA_SHORT=$CI_SHA_SHORT"
-        echo "CI_SHA=$CI_SHA"
-        echo "CI_ACTOR=$CI_ACTOR"
-        echo "CI_EVENT_NAME=$CI_EVENT_NAME"
-        echo "CI_RUN_ID=$CI_RUN_ID"
-        echo "CI_RUN_NUMBER=$CI_RUN_NUMBER"
-        echo "CI_WORKFLOW=$CI_WORKFLOW"
-        echo "CI_ACTION=$CI_ACTION"
     - name: Cleanup Codespace for PullRequest
       run: |
-        echo "${GITHUB_REF_NAME}"
-        source .github/workflows/github_api_codespaces.sh
-        target_codespaces=$(get_pullreq_unused_spaces "${{ secrets.CODESPACE_TOKEN }}" "legnoh" "leglog" "${GITHUB_REF_NAME}")
+        source .github/workflows/github_api.sh
+
+        export PR_NUMBER="${GITHUB_REF_NAME%/merge}"
+        export PR_BRANCH_NAME=$(get_branch_name_by_pr_number ${{ secrets.CODESPACE_TOKEN }} legnoh leglog ${PR_NUMBER})
+        target_codespaces=$(get_pullreq_unused_spaces "${{ secrets.CODESPACE_TOKEN }}" "legnoh" "leglog" "${PR_BRANCH_NAME}")
+        
         echo ${target_codespaces}
         echo ${target_codespaces} | while read line; do
           delete_codespace "${{ secrets.CODESPACE_TOKEN }}" "legnoh" "${line}"
