--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.27",
     "mdx-embed": "^1.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3"
